#6 migrate __RuntimeConfig_v1 to protobuf (nanopb)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 build-*
+teensy_fan_controller/nanopb.proto
+teensy_fan_controller/tools
+teensy_fan_controller/teensy3
+teensy_fan_controller/libraries/EEPROM
+teensy_fan_controller/libraries/nanopb
+*.o
+*.d
+*.hex
+*.elf
