#4 reference forked PID library, track latest changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,5 +9,5 @@
 	url = https://github.com/nanopb/nanopb.git
 [submodule "PID"]
 	path = teensy_fan_controller/libraries/PID
-	url = https://github.com/br3ttb/Arduino-PID-Library.git
+	url = git@github.com:mstrthealias/Arduino-PID-Library.git
 
